--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Css Aos Js -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-    <title>Dealer Honda Kumala Karawang</title>
+    <title>Dealer Honda IDK Medan</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
@@ -247,8 +247,6 @@
       <h3 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">Alamat Kantor:</h3>
       <ul data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
         <li>Jl. Raya Klari (dari lampu merah Lotte Lurus Ke Arah Klari)</li>
-        <li>Jl. Raya Telagasari No. 69, Pasirtalaga, Kec. Talagasari, Kabupaten Karawang</li>
-        <li>Jl. Arteri Interchange Jl. Akses Tol Karawang Barat, Sukamakmur, Kec.Telukjambe Timur, Kabupaten Karawang, Jawa Barat 41361, Indonesia</li>
       </ul>
       <div class="d-flex flex-row">
         <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500" href="https://www.instagram.com/dealerhondakarawang/?r=nametag"><i class="ri-instagram-fill"></i></a>
@@ -256,8 +254,8 @@
         <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" href=""><i class="ri-global-fill"></i></a>
       </div>
       <div data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500">
-        <p class="slogan">HONDA KUMALA KARAWANG - Jual Mobil Honda Berkualitas di Karawang</p>
-        <p class="nama-kantor">PT. Fajar Kumala Motor</p>
+        <p class="slogan">HONDA MEDAN - Jual Mobil Honda Terpercaya di Medan</p>
+        <p class="nama-kantor">Honda IDK Cemara</p>
         <p class="develop">Developed By Do's.id</p>
       </div>
     </footer>
