--- a/index.html
+++ b/index.html
@@ -230,14 +230,11 @@
           <p data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000">Sales Consultants</p>
         </div>
         <div class="button-profile">
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" class="btn btn-outline-light" href="https://api.whatsapp.com/send?phone=+6282162625345&text=Halo,%20kak%20Supriyadi"
-            ><i class="ri-whatsapp-fill"></i>082162625345</a
+          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" class="btn btn-outline-light" href="https://api.whatsapp.com/send?phone=+6282162625345&text=Halo,%20Fadly"
+            ><i class="ri-whatsapp-fill"></i>0821 6262 5345</a
           >
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="2000" class="btn btn-outline-light" href="https://api.whatsapp.com/send?phone=+6285782454449&text=Halo,%20kak%20Supriyadi"
-            ><i class="ri-whatsapp-fill"></i>085782454449</a
-          >
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="2500" class="btn btn-outline-light" href="tel:{+6281282263796}"><i class="ri-phone-fill"></i>+6281282263796</a>
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="3000" class="btn btn-outline-light" href="mailto:yadi.sy66@gmail.com"><i class="ri-mail-fill"></i>yadi.sy66@gmail.com</a>
+          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="2500" class="btn btn-outline-light" href="tel:{+6282162625345}"><i class="ri-phone-fill"></i>+62821 6262 5345</a>
+          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="3000" class="btn btn-outline-light" href="azharfadly33@gmail.com"><i class="ri-mail-fill"></i>azharfadly33@gmail.com</a>
         </div>
       </div>
     </div>
