--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="photo-profile">
         <div>
           <img data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" src="assets/images/profile.png" alt="" />
-          <h2 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500">Supriyadi</h2>
+          <h2 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500">Fadly Azhar</h2>
           <p data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000">Sales Consultants</p>
         </div>
         <div class="button-profile">
@@ -243,7 +243,7 @@
       <img src="assets/images/logo-footer.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" />
       <h3 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">Alamat Kantor:</h3>
       <ul data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-        <li>Jl. Raya Klari (dari lampu merah Lotte Lurus Ke Arah Klari)</li>
+        <li>Jl. Cemara No.39, Pulo Brayan Darat II, Kec. Medan Tim., Kota Medan, Sumatera Utara 20221</li>
       </ul>
       <div class="d-flex flex-row">
         <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500" href="https://www.instagram.com/dealerhondakarawang/?r=nametag"><i class="ri-instagram-fill"></i></a>
