--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
         <li>Jl. Cemara No.39, Pulo Brayan Darat II, Kec. Medan Tim., Kota Medan, Sumatera Utara 20221</li>
       </ul>
       <div class="d-flex flex-row">
-        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500" href="https://www.instagram.com/dealerhondakarawang/?r=nametag"><i class="ri-instagram-fill"></i></a>
-        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000" href="https://web.facebook.com/Hondakarawang45/?_rdc=1&_rdr"><i class="ri-facebook-box-fill"></i></a>
+        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500" href="https://www.instagram.com/hondamedanfadly/?r=nametag"><i class="ri-instagram-fill"></i></a>
+        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000" href="https://www.facebook.com/profile.php?id=61572186591877"><i class="ri-facebook-box-fill"></i></a>
         <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" href=""><i class="ri-global-fill"></i></a>
       </div>
       <div data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500">
         <p class="slogan">HONDA MEDAN - Jual Mobil Honda Terpercaya di Medan</p>
         <p class="nama-kantor">Honda IDK Cemara</p>
-        <p class="develop">Developed By Do's.id</p>
+        <p class="develop">Developed By Fadly Azhar</p>
       </div>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
