--- a/pricelist.html
+++ b/pricelist.html
@@ -622,19 +622,17 @@
       <img src="assets/images/logo-footer.png" alt="" data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" />
       <h3 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">Alamat Kantor:</h3>
       <ul data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-        <li>Jl. Raya Klari (dari lampu merah Lotte Lurus Ke Arah Klari)</li>
-        <li>Jl. Raya Telagasari No. 69, Pasirtalaga, Kec. Talagasari, Kabupaten Karawang</li>
-        <li>Jl. Arteri Interchange Jl. Akses Tol Karawang Barat, Sukamakmur, Kec.Telukjambe Timur, Kabupaten Karawang, Jawa Barat 41361, Indonesia</li>
+        <li>Jl. Cemara No.39, Pulo Brayan Darat II, Kec. Medan Tim., Kota Medan, Sumatera Utara 20221</li>
       </ul>
       <div class="d-flex flex-row">
-        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500" href="https://www.instagram.com/dealerhondakarawang/?r=nametag"><i class="ri-instagram-fill"></i></a>
-        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000" href="https://web.facebook.com/Hondakarawang45/?_rdc=1&_rdr"><i class="ri-facebook-box-fill"></i></a>
+        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500" href="https://www.instagram.com/hondamedanfadly/?r=nametag"><i class="ri-instagram-fill"></i></a>
+        <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000" href="https://www.facebook.com/profile.php?id=61572186591877"><i class="ri-facebook-box-fill"></i></a>
         <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" href=""><i class="ri-global-fill"></i></a>
       </div>
       <div data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500">
-        <p class="slogan">HONDA KUMALA KARAWANG - Jual Mobil Honda Berkualitas di Karawang</p>
-        <p class="nama-kantor">PT. Fajar Kumala Motor</p>
-        <p class="develop">Developed By Do's.id</p>
+        <p class="slogan">HONDA MEDAN - Jual Mobil Honda Terpercaya di Medan</p>
+        <p class="nama-kantor">Honda IDK Cemara</p>
+        <p class="develop">Developed By Fadly Azhar</p>
       </div>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
