--- a/detail-brio-satya.html
+++ b/detail-brio-satya.html
@@ -23,7 +23,7 @@
     <!-- Css Aos Js -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-    <title>Honda Brio Satya | Dealer Honda Kumala Karawang</title>
+    <title>Honda Brio Satya | Dealer Honda IDK Cemara</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
@@ -117,7 +117,7 @@
           <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/watch?v=Po9MIxR5nHM"
+            src="https://youtu.be/Po9MIxR5nHM?si=jZXZ9iEtlv64ste0"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -138,7 +138,7 @@
             <img src="assets/images/brio.png" alt="" />
             <p class="nama-mobil">New Honda Brio Satya</p>
             <p class="harga">Harga Mulai</p>
-            <h3 class="price">Rp 170.700.000</h3>
+            <h3 class="price">Rp 216.500.000</h3>
             <a href="" class="btn btn-danger">Lihat Detail</a>
           </div>
           <div class="tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" data-aos-delay="500">
