--- a/detail-brio-satya.html
+++ b/detail-brio-satya.html
@@ -117,7 +117,7 @@
           <iframe
             width="560"
             height="315"
-            src="https://youtu.be/Po9MIxR5nHM"
+            src="https://www.youtube.com/embed/Po9MIxR5nHM"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
