--- a/pricelist.html
+++ b/pricelist.html
@@ -65,14 +65,14 @@
     <div class="table-pricelist">
       <div class="table-price">
         <div class="title-price">
-          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>ALL NEW HONDA BRIO SATYA</p>
+          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>NEW HONDA BRIO SATYA</p>
         </div>
         <div class="card-tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
           <div class="card border-danger">
             <img src="assets/images/brio.png" alt="" />
-            <p class="nama-mobil">All New Honda Brio Satya</p>
+            <p class="nama-mobil">New Honda Brio Satya</p>
             <p class="harga">Harga Mulai</p>
-            <h3 class="price">Rp 170.700.000</h3>
+            <h3 class="price">Rp 216.500.000</h3>
             <a href="detail-brio-satya.html" class="btn btn-danger">Lihat Detail</a>
           </div>
           <div class="tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
@@ -86,15 +86,15 @@
               <tbody>
                 <tr>
                   <td scope="row">S MT</td>
-                  <td>Rp 170.700.000</td>
+                  <td>Rp 216.500.000</td>
                 </tr>
                 <tr>
                   <td scope="row">E MT</td>
-                  <td>Rp 179.700.000</td>
+                  <td>Rp 228.500.000</td>
                 </tr>
                 <tr>
                   <td scope="row">E CVT</td>
-                  <td>Rp 195.200.000</td>
+                  <td>Rp 244.600.000</td>
                 </tr>
                 <tr>
                   <td scope="row" class="harga-berubah">*Harga dapat berubah sewaktu-waktu</td>
@@ -107,14 +107,14 @@
       </div>
       <div class="table-price">
         <div class="title-price">
-          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>ALL NEW HONDA BRIO RS</p>
+          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>NEW HONDA BRIO RS</p>
         </div>
         <div class="card-tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
           <div class="card border-danger">
             <img src="assets/images/brio-hitam.png" alt="" />
-            <p class="nama-mobil">All New Honda Brio RS</p>
+            <p class="nama-mobil">New Honda Brio RS</p>
             <p class="harga">Harga Mulai</p>
-            <h3 class="price">Rp 209.100.000</h3>
+            <h3 class="price">Rp 287.200.000</h3>
             <a href="detail-brio-rs.html" class="btn btn-danger">Lihat Detail</a>
           </div>
           <div class="tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
@@ -128,19 +128,19 @@
               <tbody>
                 <tr>
                   <td scope="row">RS MT</td>
-                  <td>Rp 209.100.000</td>
+                  <td>Rp 287.200.000</td>
                 </tr>
                 <tr>
                   <td scope="row">RS CVT</td>
-                  <td>Rp 224.300.000</td>
+                  <td>Rp 297.700.000</td>
                 </tr>
                 <tr>
-                  <td scope="row">Urbanite MT</td>
-                  <td>Rp 215.100.000</td>
+                  <td scope="row">RS MT Two Tone</td>
+                  <td>Rp 289.700.000</td>
                 </tr>
                 <tr>
-                  <td scope="row">Urbanite CVT</td>
-                  <td>Rp 230.300.000</td>
+                  <td scope="row">RS CVT Two Tone</td>
+                  <td>Rp 300.200.000</td>
                 </tr>
                 <tr>
                   <td scope="row" class="harga-berubah">*Harga dapat berubah sewaktu-waktu</td>
