--- a/index.html
+++ b/index.html
@@ -126,23 +126,23 @@
       <div class="catalog">
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/brio.png" alt="" />
-          <p class="nama-mobil">All New Honda Brio Satya</p>
+          <p class="nama-mobil">New Honda Brio Satya</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 170.700.000</h3>
+          <h3 class="price">Rp 216.500.000</h3>
           <a href="detail-brio-satya.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/brio-hitam.png" alt="" />
-          <p class="nama-mobil">All New Honda Brio RS</p>
+          <p class="nama-mobil">New Honda Brio RS</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 209.100.000</h3>
+          <h3 class="price">Rp 287.200.000</h3>
           <a href="detail-brio-rs.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/mobilio.png" alt="" />
-          <p class="nama-mobil">Mobilio</p>
+          <p class="nama-mobil">Honda WR-V</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 228.200.000</h3>
+          <h3 class="price">Rp 317.100.000</h3>
           <a href="detail-mobilio.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
@@ -154,67 +154,46 @@
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/brv.png" alt="" />
-          <p class="nama-mobil">New Honda BR-V</p>
+          <p class="nama-mobil">All New Honda BR-V</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 272.700.000</h3>
+          <h3 class="price">Rp 340.400.000</h3>
           <a href="detail-brv.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/hrv.png" alt="" />
-          <p class="nama-mobil">New Honda HR-V</p>
+          <p class="nama-mobil">All New Honda HR-V</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 324.300.000</h3>
+          <h3 class="price">Rp 434.100.000</h3>
           <a href="detail-hrv.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/crv.png" alt="" />
-          <p class="nama-mobil">New Honda CR-V</p>
+          <p class="nama-mobil">All New Honda CR-V</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 492.300.000</h3>
+          <h3 class="price">Rp 806.000.000</h3>
           <a href="detail-crv.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/civic-back.png" alt="" />
-          <p class="nama-mobil">New Honda CIVIC HATCBACK RS</p>
+          <p class="nama-mobil">CITY HATCBACK RS</p>
           <p class="harga">Harga Mulai</p>
           <h3 class="price">Rp 530.300.000</h3>
           <a href="detail-civichat.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/civic-turbo.png" alt="" />
-          <p class="nama-mobil">New Honda CIVIC TURBO</p>
+          <p class="nama-mobil">All New Honda CIVIC TURBO</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 0</h3>
+          <h3 class="price">Rp 670.400.000</h3>
           <a href="detail-civic-turbo.html" class="btn btn-danger">Lihat Detail</a>
-        </div>
-        <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-          <img src="assets/images/city.png" alt="" />
-          <p class="nama-mobil">New Honda CITY</p>
-          <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 0</h3>
-          <a href="detail-city.html" class="btn btn-danger">Lihat Detail</a>
         </div>
         <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
           <img src="assets/images/accord.png" alt="" />
           <p class="nama-mobil">All New Honda ACCORD</p>
           <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 756.500.000</h3>
+          <h3 class="price">Rp 1.013.100.000</h3>
           <a href="detail-accord.html" class="btn btn-danger">Lihat Detail</a>
-        </div>
-
-        <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-          <img src="assets/images/oddesey.png" alt="" />
-          <p class="nama-mobil">New Honda ODYSSEY</p>
-          <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 900.500.000</h3>
-          <a href="detail-odyssey.html" class="btn btn-danger">Lihat Detail</a>
-        </div>
-        <div class="card border-danger" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-          <img src="assets/images/civic-typeR.png" alt="" />
-          <p class="nama-mobil">Honda CIVIC TYPE-R</p>
-          <p class="harga">Harga Mulai</p>
-          <h3 class="price">Rp 1.184.000.000</h3>
-          <a href="detail-civic-r.html" class="btn btn-danger">Lihat Detail</a>
+          
         </div>
       </div>
     </div>
