--- a/pricelist.html
+++ b/pricelist.html
@@ -153,14 +153,14 @@
       </div>
       <div class="table-price">
         <div class="title-price">
-          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>HONDA MOBILIO</p>
+          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>HONDA WR-V</p>
         </div>
         <div class="card-tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
           <div class="card border-danger">
             <img src="assets/images/mobilio.png" alt="" />
-            <p class="nama-mobil">Mobilio</p>
+            <p class="nama-mobil">WR-V</p>
             <p class="harga">Harga Mulai</p>
-            <h3 class="price">Rp 228.200.000</h3>
+            <h3 class="price">Rp 317.100.000</h3>
             <a href="detail-mobilio.html" class="btn btn-danger">Lihat Detail</a>
           </div>
           <div class="tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
@@ -173,32 +173,28 @@
               </thead>
               <tbody>
                 <tr>
-                  <td scope="row">S MT</td>
-                  <td>Rp 228.200.000</td>
-                </tr>
-                <tr>
                   <td scope="row">E MT</td>
-                  <td>Rp 248.800.000</td>
+                  <td>Rp 317.100.000</td>
                 </tr>
                 <tr>
                   <td scope="row">E CVT</td>
-                  <td>Rp 260.100.000</td>
-                </tr>
-                <tr>
-                  <td scope="row">RS MT</td>
-                  <td>Rp 272.500.000</td>
+                  <td>Rp 327.600.000</td>
                 </tr>
                 <tr>
                   <td scope="row">RS CVT</td>
-                  <td>Rp 282.800.000</td>
+                  <td>Rp 347.900.000</td>
                 </tr>
                 <tr>
-                  <td scope="row">RS (Two Tone) MT</td>
-                  <td>Rp 274.000.000</td>
+                  <td scope="row">RS CVT Two Tone</td>
+                  <td>Rp 350.400.000</td>
                 </tr>
                 <tr>
-                  <td scope="row">RS (Two Tone) CVT</td>
-                  <td>Rp 284.300.000</td>
+                  <td scope="row">RS HS CVT</td>
+                  <td>Rp 368.900.000</td>
+                </tr>
+                <tr>
+                  <td scope="row">RS HS CVT Two Tone</td>
+                  <td>Rp 371.400.000</td>
                 </tr>
                 <tr>
                   <td scope="row" class="harga-berubah">*Harga dapat berubah sewaktu-waktu</td>
@@ -218,7 +214,7 @@
             <img src="assets/images/city-hatcback.png" alt="" />
             <p class="nama-mobil">Honda CITY HATCHBACK RS</p>
             <p class="harga">Harga Mulai</p>
-            <h3 class="price">Rp 307.500.000</h3>
+            <h3 class="price">Rp 389.500.000</h3>
             <a href="detail-city-hatchback-rs.html" class="btn btn-danger">Lihat Detail</a>
           </div>
           <div class="tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
@@ -232,11 +228,14 @@
               <tbody>
                 <tr>
                   <td scope="row">RS MT</td>
-                  <td>Rp 307.500.000</td>
+                  <td>Rp 389.500.000</td>
                 </tr>
                 <tr>
                   <td scope="row">RS CVT</td>
-                  <td>Rp 317.500.000</td>
+                  <td>Rp 400.200.000</td>
+                </tr>
+                  <td scope="row">RS CVT Honda Sensing</td>
+                  <td>Rp 420.100.000</td>
                 </tr>
                 <tr>
                   <td scope="row" class="harga-berubah">*Harga dapat berubah sewaktu-waktu</td>
@@ -249,14 +248,14 @@
       </div>
       <div class="table-price">
         <div class="title-price">
-          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>NEW HONDA BR-V</p>
+          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>All NEW HONDA BR-V</p>
         </div>
         <div class="card-tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
           <div class="card border-danger">
             <img src="assets/images/brv.png" alt="" />
-            <p class="nama-mobil">New Honda BR-V</p>
+            <p class="nama-mobil">All New Honda BR-V</p>
             <p class="harga">Harga Mulai</p>
-            <h3 class="price">Rp 272.700.000</h3>
+            <h3 class="price">Rp 340.400.000</h3>
             <a href="detail-brv.html" class="btn btn-danger">Lihat Detail</a>
           </div>
           <div class="tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
@@ -270,19 +269,23 @@
               <tbody>
                 <tr>
                   <td scope="row">S MT</td>
-                  <td>Rp 272.700.000</td>
+                  <td>Rp 340.400.000</td>
                 </tr>
                 <tr>
                   <td scope="row">E MT</td>
-                  <td>Rp 287.900.000</td>
+                  <td>Rp 355.600.000</td>
                 </tr>
                 <tr>
-                  <td scope="row">E CVT</td>
-                  <td>Rp 297.700.000</td>
+                  <td scope="row">E CVT N7X</td>
+                  <td>Rp 368.700.000</td>
                 </tr>
                 <tr>
-                  <td scope="row">PRES CVT</td>
-                  <td>Rp 314.400.000</td>
+                  <td scope="row">PRESTIGE N7X</td>
+                  <td>Rp 394.400.000</td>
+                </tr>
+                <tr>
+                  <td scope="row">PRESTIGE N7X HS</td>
+                  <td>Rp 415.500.000</td>
                 </tr>
                 <tr>
                   <td scope="row" class="harga-berubah">*Harga dapat berubah sewaktu-waktu</td>
@@ -295,12 +298,12 @@
       </div>
       <div class="table-price">
         <div class="title-price">
-          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>NEW HONDA HR-V</p>
+          <p class="icon-mobil"><i class="fas fa-clipboard-list"></i>All NEW HONDA HR-V</p>
         </div>
         <div class="card-tabel" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
           <div class="card border-danger">
             <img src="assets/images/hrv.png" alt="" />
-            <p class="nama-mobil">New Honda HR-V</p>
+            <p class="nama-mobil">All New Honda HR-V</p>
             <p class="harga">Harga Mulai</p>
             <h3 class="price">Rp 324.300.000</h3>
             <a href="detail-hrv.html" class="btn btn-danger">Lihat Detail</a>
