--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <!-- Css Aos Js -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-    <title>Tentang Kami | Dealer Honda Kumala Karawang</title>
+    <title>Tentang Kami | Dealer Honda IDK Cemara</title>
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
@@ -66,7 +66,7 @@
       <img class="testi" src="assets/images/testi.jpeg" alt="" data-aos="zoom-in-up" data-aos-easing="linear" data-aos-duration="1000" />
       <div>
         <p>
-          Perkenalkan saya Supriyadi (Sales Consultants) Dealer Resmi Honda Kumala Karawang, Saya akan membantu Anda dalam memiliki kendaraan Honda dalam bentuk: konsultasi menentukan produk Honda yang sesuai dengan kebutuhan, konsultasi
+          Perkenalkan saya Fadly Azhar (Sales Consultants) Dealer Resmi Honda IDK Cemara, Saya akan membantu Anda dalam memiliki kendaraan Honda dalam bentuk: konsultasi menentukan produk Honda yang sesuai dengan kebutuhan, konsultasi
           pembelian cash/credit yang sesuai dan cocok dengan perhitungan paket terbaik, memberikan paket promo terbaik, test drive kendaraan, layanan service seperti booking service.
         </p>
         <h2>Keuntungan Pembelian Dengan Kami:</h2>
