--- a/pricelist.html
+++ b/pricelist.html
@@ -351,25 +351,22 @@
           </div>
         </div>
       </div>
-    <div class="pl-3 icon-absolute" id="profile">
+     <div class="pl-3 icon-absolute" id="profile">
       <p class="icon-user"><i class="fas fa-user-tie"></i>Hubungi Kami</p>
     </div>
     <div class="profile">
       <div class="photo-profile">
         <div>
           <img data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" src="assets/images/profile.png" alt="" />
-          <h2 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500">Supriyadi</h2>
+          <h2 data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="500">Fadly Azhar</h2>
           <p data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1000">Sales Consultants</p>
         </div>
         <div class="button-profile">
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" class="btn btn-outline-light" href="https://api.whatsapp.com/send?phone=+6281282263796&text=Halo,%20kak%20Supriyadi"
-            ><i class="ri-whatsapp-fill"></i>081282263796</a
+          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="1500" class="btn btn-outline-light" href="https://api.whatsapp.com/send?phone=+6282162625345&text=Halo,%20Fadly"
+            ><i class="ri-whatsapp-fill"></i>0821 6262 5345</a
           >
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="2000" class="btn btn-outline-light" href="https://api.whatsapp.com/send?phone=+6285782454449&text=Halo,%20kak%20Supriyadi"
-            ><i class="ri-whatsapp-fill"></i>085782454449</a
-          >
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="2500" class="btn btn-outline-light" href="tel:{+6281282263796}"><i class="ri-phone-fill"></i>+6281282263796</a>
-          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="3000" class="btn btn-outline-light" href="mailto:yadi.sy66@gmail.com"><i class="ri-mail-fill"></i>yadi.sy66@gmail.com</a>
+          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="2500" class="btn btn-outline-light" href="tel:{+6282162625345}"><i class="ri-phone-fill"></i>+62821 6262 5345</a>
+          <a data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-delay="3000" class="btn btn-outline-light" href="azharfadly33@gmail.com"><i class="ri-mail-fill"></i>azharfadly33@gmail.com</a>
         </div>
       </div>
     </div>
